# opae-sdk

./: .build.json  .gitattributes  .gitconfig  .gitignore  .gitlab-ci.yml  .id  .travis.yml  1  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  LICENSE  PACSign.md  README  README.md  RELEASE_NOTES  RELEASE_NOTES.md  ReadMe.txt  SECURITY.md  api-shell.c  buildit.py  foo.sh  fpgaflash  init.c  opae-config-version.in  opae-config.cmake.in  opae-sdk-rpm.spec  opae.cfg  opae.spec  opae.spec.fedora  opae.spec.in  opae.spec.rhel  pluginmgr.c  run.sh  setup.py  super-rsu  test_opae.py  tox.ini
afu-test/: CMakeLists.txt  afu_test.cpp  afu_test.h
ase/: CMakeLists.txt  Makefile  README.txt  ase.cfg  ase_sources.bat  client.bat  server.bat
ase/api/: CMakeLists.txt
ase/in/: CMakeLists.txt.in  afu_platform_config.py.in  ase.cfg.in  ase_regress.sh.in  ase_server.in  platform.txt.in  platform_if_includes.txt.in  rtl_src_config.py.in  sources_simulation.txt.in  vsim_run.tcl.in
ase/rtl/: CMakeLists.txt  ase_pkg.sv  ase_svfifo.sv  ase_top.sv  ccip_checker.sv  ccip_emulator.sv  ccip_logger.sv  inorder_wrf_channel.sv  latency_pipe.sv  outoforder_wrf_channel.sv  platform.vh  platform_if_addenda.txt.in  sources.txt  sources_abs.txt.in  sources_ase_server.txt  sources_quartus_libs.txt
ase/samples/: CMakeLists.txt
ase/scripts/: afu_sim_setup  ase_functions.py  create_ase_simbuild_env.sh  generate_ase_environment.py  ipc_clean.py  sim_afu
ase/sw/: CMakeLists.txt  app_backend.c  ase_common.h  ase_host_memory.c  ase_host_memory.h  ase_ops.c  ase_shbuf.c  ase_strings.c  error_report.c  ipc_mgmt_ops.c  linked_list_ops.c  mem_model.c  mqueue_ops.c  protocol_backend.c  randomness_control.c  tstamp_ops.c
binaries/: CMakeLists.txt
binaries/fpgabist/: CMakeLists.txt  bist_nlb3.py  fpgabist
binaries/fpgaconf/: CMakeLists.txt  fpgaconf.c
binaries/fpgad/: CMakeLists.txt  command_line.c  command_line.h  config_file.c  config_file.h  daemonize.c  event_dispatcher_thread.c  events_api_thread.c  fpgad.c  fpgad.cfg  fpgad.conf  fpgad.h  fpgad.service.in  monitor_thread.c  monitored_device.c  monitored_device.h
binaries/fpgadiag/: CMakeLists.txt  nlb0.json  pyproject.toml  setup.py
binaries/fpgainfo/: CMakeLists.txt  bmcdata.c  board.c  board.h  errors.c  errors.h  errors_metadata.h  events.c  fpgainfo.c  main.c  powerinfo.h
binaries/fpgametrics/: CMakeLists.txt  fpgametrics.c
binaries/grpcreset/: CMakeLists.txt  main.cpp
binaries/grpcserver/: CMakeLists.txt  main.cpp
binaries/hssi/: CMakeLists.txt  pyproject.toml  setup.py
binaries/inetserv/: CMakeLists.txt  cfg.h  handle_client.c  handle_client.h  inetserv.c  inetserv.h  main.c
binaries/mmlink/: CMakeLists.txt  main.cpp
binaries/ofs.uio/: CMakeLists.txt  pyproject.toml  setup.py
binaries/opae.io/: CMakeLists.txt  MANIFEST.in  main.cpp  main.h  pymain.h  pyproject.toml  setup.py  vfiobindings.cpp
binaries/qpafilter/: qpafilter.py  test_qpafilter.py
binaries/qsfpinfo/: CMakeLists.txt  cmis_wrap.c  main.c  sff-common_wrap.c
binaries/udsserv/: CMakeLists.txt  handle_client.c  handle_client.h  main.c  udsserv.c  udsserv.h
binaries/userclk/: CMakeLists.txt  main.c
binaries/vabtool/: CMakeLists.txt  vabtool
doc/doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in  DoxygenLayout.xml
framework/mock/: CMakeLists.txt  c_test_system.h  mock.c  test_system.cpp  test_system.h
libbitstream/: CMakeLists.txt  bits_utils.c  bits_utils.h  bitstream.c  bitstream.h  metadatav1.c  metadatav1.h
libopae/: .clang-format  CMakeLists.txt  adapter.h  api-shell.c  feature_pluginmgr.c  feature_pluginmgr.h  feature_token_list.c  feature_token_list_int.h  init.c  init_ase.c  log_int.h  opae_int.h  pluginldr.c  pluginldr.h  pluginmgr.c  pluginmgr.h  props.c  props.h  types_int.h
libopae++/: CMakeLists.txt
libopae++/samples/: hello_fpga-1.cpp  hello_fpga-2.cpp  hello_fpga-3.cpp  hello_fpga-4.cpp  simple_example.cpp
libopae++/src/: accelerator.cpp  dma_buffer.cpp  errors.h  events.cpp  except.cpp  handle.cpp  log.cpp  mmio.cpp  mmio_region.cpp  properties.cpp  shared_buffer.cpp  token.cpp  version.cpp
libopae++/tests/: CMakeLists.txt  gtmain.cpp
libopae/plugins/: CMakeLists.txt
libopae/src/: bitstream.c  bitstream_int.h  buffer.c  close.c  common.c  common_int.h  enum.c  error.c  error_int.h  event.c  hostif.c  init.c  intel-fpga.h  log.c  log_int.h  manage.c  mmio.c  numa.c  numa_int.h  open.c  properties.c  properties_int.h  reconf.c  sys.c  sysfs.c  sysfs_int.h  sysobject.c  token_list.c  token_list_int.h  types_int.h  umsg.c  version.c  wsid_list.c  wsid_list_int.h
libopae/support/: CMakeLists.txt  sysfs.c  sysfs.h
libopaecxx/: CMakeLists.txt
libopaecxx/samples/: hello_fpga-1.cpp
libopaecxx/src/: errors.cpp  events.cpp  except.cpp  handle.cpp  properties.cpp  shared_buffer.cpp  sysobject.cpp  token.cpp  version.cpp
libraries/: CMakeLists.txt
libraries/afu-test/: CMakeLists.txt  afu_test.cpp  afu_test.h
libraries/argsfilter/: .clang-format  CMakeLists.txt
libraries/c++utils/: CMakeLists.txt  any_value.h  cmd_handler.h
libraries/libbitstream/: CMakeLists.txt  bits_utils.c  bitstream.c  metadatav1.c
libraries/libofs/: CMakeLists.txt  ofs_log.c
libraries/libopae-c/: CMakeLists.txt  adapter.h  (+28 more)
pyopae/: CMakeLists.txt  MANIFEST.in  README.md  accel.py  diag.py  opae.cpp  opae2.cpp  pycontext.cpp  pyerrors.h  pyevents.cpp  pyevents.h  pyhandle.cpp  pyhandle.h  pyproperties.cpp  pyproperties.h  pyshared_buffer.cpp  pyshared_buffer.h  pysysobject.cpp  pysysobject.h  pytoken.h  setup.py  test_pybind_compile.cpp  test_pyopae.py
python/: CMakeLists.txt
samples/: CMakeLists.txt  hello_events.c  hello_fpga.c  object_api.c
testing/: CMakeLists.txt  CMakeLists.txt.in  readme.md
tests/: CMakeLists.txt  COPYING  common_test.cpp  common_test.h  configuration.json  fpgamock.c  fpgaopen_app.cpp  gtmain.cpp  gtunit-main.cpp  jsonParser.cpp  mock.c  mocksign.py  test_common_util.py  test_database.py  test_ecdsa.py  test_key_manager.py  test_openssl.py  test_reader.py  test_verifier.py
tools/: CMakeLists.txt
(+5400 files in other folders)
